--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
